--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,6 @@
 /* font-family*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
+
+:root {
+  font-size: 16px;
+}
