--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "~antd/dist/antd.css";
+
 /* font-family*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
 
